Alterado caminho para capa-livro

--- a/livro/index.html
+++ b/livro/index.html
@@ -10,7 +10,7 @@
     <section class="primeira">
       <h1>A Era Artificial</h1>
 
-      <img src="/assets/capa-livro.jpg" />
+      <img src="assets/capa-livro.jpg" />
 
       <h2>Um futuro sombrio a nosso caminho</h2>
 
