Feat: Adicionado Footer

--- a/imobiliária/index.html
+++ b/imobiliária/index.html
@@ -55,41 +55,41 @@
 
     <section class="brokers" id="brokers">
       <img src="assets/corretores.jpg" />
-      <p>
-        A <span>Imobiliária Santos</span> A imobiliária Santos conta com um time
-        de profissionais qualificados que têm vários anos de experiência no
-        mercado. Para entrar em contato com um de nossos corretores, basta
-        clicar no link a seguir
-      </p>
-
-      <a href="mailto:corretores@email.com">Contate-os</a>
+      <div>
+        <p>
+          A <span>Imobiliária Santos</span> A imobiliária Santos conta com um
+          time de profissionais qualificados que têm vários anos de experiência
+          no mercado. Para entrar em contato com um de nossos corretores, basta
+          clicar no link a seguir
+        </p>
+        <a href="mailto:corretores@email.com">Contate-os</a>
+      </div>
     </section>
 
     <footer id="contact">
       <h1>CONTATO</h1>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7346.254844548052!2d-43.364712467659004!3d-22.98234139602229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2ed54ec2e1%3A0x4431d262cad1d163!2sAv.%20Ayrton%20Senna%2C%203000%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022775-904!5e0!3m2!1spt-BR!2sbr!4v1642532754862!5m2!1spt-BR!2sbr"
-      ></iframe>
-      <p>
-        Se ficou interessado em nos conhecer ou se tiver dúvidas entre em
-        <span>contato</span> conosco através de um dos telefones abaixo:
-      </p>
-      <div>
-        <p>
+      <div class="align">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7346.254844548052!2d-43.364712467659004!3d-22.98234139602229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2ed54ec2e1%3A0x4431d262cad1d163!2sAv.%20Ayrton%20Senna%2C%203000%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022775-904!5e0!3m2!1spt-BR!2sbr!4v1642532754862!5m2!1spt-BR!2sbr"
+        ></iframe>
+        <div class="text-content">
+          <p>
+            Se ficou interessado em nos conhecer ou se tiver dúvidas entre em
+            <span>contato</span> conosco através de um dos telefones abaixo:
+          </p>
+
           <a href="tel:+557598989-0000"
-            ><i class="bx bx-phone"></i>Escritório Barra da Tijuca</a
+            ><i class="bx bx-phone"></i> | Escritório Barra da Tijuca</a
           >
-        </p>
-        <p>
+
           <a href="tel:+557598989-0000"
-            ><i class="bx bx-phone"></i>Escritório Centro/RJ</a
+            ><i class="bx bx-phone"></i> | Escritório Centro/RJ</a
           >
-        </p>
-        <p>
+
           <a href="tel:+557598989-0000"
-            ><i class="bx bx-phone"></i>Escritório Méier</a
+            ><i class="bx bx-phone"></i>| Escritório Méier</a
           >
-        </p>
+        </div>
       </div>
     </footer>
   </body>
